--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "expo": "~52.0.25",
     "expo-status-bar": "~2.0.1",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-native": "0.76.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint-plugin-react-hooks": "^5.1.0"
   },
   "private": true
 }
